[package]
name = "librespot-protocol"
version = "0.5.0"
rust-version = "1.75"
authors = ["Paul Liétar <paul@lietar.net>"]
build = "build.rs"
description = "The protobuf logic for communicating with Spotify servers"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies]
protobuf = "3.5"

[build-dependencies]
protobuf-codegen = "3"
