[package]
name = "librespot-protocol"
version.workspace = true
rust-version.workspace = true
authors = ["Paul Liétar <paul@lietar.net>"]
license.workspace = true
description = "The protobuf logic for communicating with Spotify servers"
repository.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
protobuf = "3.7"

[build-dependencies]
protobuf-codegen = "3"
